--- a/TextJyawo/TextJyawo/MainWindow.xaml
+++ b/TextJyawo/TextJyawo/MainWindow.xaml
@@ -17,33 +17,40 @@
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="15*"/>
             </Grid.RowDefinitions>
-
             <Label Grid.Row="0"  >Find</Label>
-            <TextBox  Grid.Row="1" Margin="5" Name="txtFind" TextWrapping="Wrap"   AcceptsReturn="True"    />
+            <TextBox  Grid.Row="1" Margin="5 0 0 5" Name="txtFind" TextWrapping="Wrap" AcceptsReturn="True" KeyUp="txtFind_KeyUp"    />
             <Label Grid.Row="2"  >Replace</Label>
-            <TextBox Name="txtReplace" Margin="5" Grid.Row="3" TextWrapping="Wrap"
-  AcceptsReturn="True"  />
+            <TextBox Name="txtReplace" Margin="5 0 0 5" Grid.Row="3" TextWrapping="Wrap" AcceptsReturn="True"  KeyUp="txtReplace_KeyUp"  />
         </Grid>
-        <Grid >
+        
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="1*"/>
                 <RowDefinition Height="30"/>
-                <RowDefinition Height="15*"/>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
-
-            <Label Grid.Row="0"   >Input</Label>
-            <TextBox  Grid.Row="1" Margin="5" Name="txtInput" TextWrapping="Wrap"  AcceptsReturn="True"     />
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                </Grid.RowDefinitions>
+                <Label Grid.Column="0"   >Input</Label>
+                <StackPanel Grid.Column="1" Orientation="Horizontal"   HorizontalAlignment="Right">
+                    <Label VerticalAlignment="Center"   >Delemeter</Label>
+                    <TextBox IsTabStop="False" Name="txtDelimiter" Margin="5" Width="50" TextAlignment="Center"  FontFamily="Lucida Sans" >,</TextBox>
+                    <CheckBox IsTabStop="False" VerticalAlignment="Center" HorizontalAlignment="Left" Name="chkCopyToClipBoard" IsChecked="True">Copy</CheckBox>
+                </StackPanel>
+            </Grid>
+            <TextBox  Grid.Row="1" Margin="5 0 0 5" Name="txtInput" TextWrapping="Wrap"  AcceptsReturn="True" KeyUp="txtInput_KeyUp"     />
             <Label Grid.Row="2"   >Output</Label>
-            <TextBox Name="txtOutput" Grid.Row="3" Margin="5"/>
-            <StackPanel Orientation="Horizontal" Grid.Row="4" HorizontalAlignment="Right">
-                <TextBox Name="txtDelimiter" Margin="5" Width="50" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="Lucida Sans" >,</TextBox>
-                <Button Name="btnReplace" Click="btnReplace_Click" Margin="5" Padding="5 0 5 0" FontSize="14.667" FontWeight="Bold">_Replace</Button>
-            </StackPanel>
+            <TextBox Name="txtOutput" Grid.Row="3" Margin="5 0 0 5"/>
         </Grid>
     </DockPanel>
 </Window>
